Refactoring & cleanup